2008-06-10  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_allocate_page_table): Don't change STORAGE.CAP's
	shadow, only change RET.CAP's shadow.

2008-06-10  Neal H. Walfield  <neal@gnu.org>

	* storage.h (storage_have_reserve): New declaration.
	* storage.c (storage_have_reserve): New function.
	(storage_check_reserve_internal): Use it.
	* as.h (as_lock): Check whether there is sufficient memory.
	(as_lock_readonly): Likewise.
	(as_unlock): Don't check here.

2008-06-10  Neal H. Walfield  <neal@gnu.org>

	* storage.c (struct storage_desc): Remove field cap.  Replace with
	field shadow.  Update users.

	(storage_free_): Clear the object's shadow.

2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): If the remaining bits match the PTE's
	guard, stop processing no matter what type of object the PTE
	points to.  Only use lowest GBITS of PTE_GUARD when setting the
	pivot's guard.

2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* as.h (AS_CHECK_SHADOW): If only the types differ and the
	difference is that the shadow capability says the type is
	cap_void, then do not error out.

2008-06-07  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): When a guard completes an address
	translation, do not subtract the bits translated by the guard from
	REMAINING.  Only assume that capabilities that are void and have a
	zero length guard are unused.  When inserting a page table, only
	copy the pivot if it is in use.
	
	* as.h (AS_CHECK_SHADOW): New macro.
	(AS_CHECK_SHADOW2): Likewise.
	(as_ensure_full): Use them here.
	(as_insert_full): Likewise.
	(as_slot_lookup_rel_use): Likewise.
	(as_cap_lookup_rel): Likewise.
	(as_object_lookup_rel): Likewise.
	* as-build.c (as_build): Likewise.  Improve debugging output.
	* as.h (as_ensure): Change from a function to a macro.
	(as_insert_full): Correctly check the return value from cap_copy.
	* as-compute-gbits.h (as_compute_gbits_cappage): Use assertx to